lucia-macros/tests/ui/error_enum/absent_req_or_res.stderr
error: The `#[pkg]` module must have an inner `#[pkg::req_data]` element and an inner `#[pkg::res_data]` element.
 --> tests/ui/error_enum/absent_req_or_res.rs:5:5
  |
5 | mod a {
  |     ^

error: The `#[pkg]` module must have an inner `#[pkg::req_data]` element and an inner `#[pkg::res_data]` element.
 --> tests/ui/error_enum/absent_req_or_res.rs:9:5
  |
9 | mod b {
  |     ^

error: The `#[pkg]` module must have an inner `#[pkg::req_data]` element and an inner `#[pkg::res_data]` element.
  --> tests/ui/error_enum/absent_req_or_res.rs:17:5
   |
17 | mod c {
   |     ^
